tests/toylang/neg/000747_mutation.toylang
program a = { a = 0 .; } .
